# call-me-maybe

./: .gitignore  Makefile  README.md  functions_definition.json  main.py  moulinette.txt  pyproject.toml
data/input/: function_calling_tests.json
data/input_old/: function_calling_tests.json  functions_definition.json
data/output/: function_calling_results.json
src/: __main__.py  generator.py  grammar.py  schema.py  vocabulary.py
